# doesjitgobrrr

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.yml  pre-commit-config.yaml  sources.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: suggest_annotations.py  test_suggest_annotations.py
.github/workflows/: build-and-push.yml  build.yml  fastapicloud-deploy.yml  lint.yml  suggest-annotations.yml  test.yml  typecheck.yml  update-data.yml
api/: .dockerignore  .fastapicloudignore  Dockerfile  Dockerfile.dev  data.py  database.py  generate_static_data.py  hpt.py  load_data.py  main.py  migrate_commit_hashes.py  models.py  perf_events.yaml  pyproject.toml  sources.yaml  update_hpt.py
api/data/: benchmarks.db
api/tests/: conftest.py  fixtures.py  test_app.py  test_endpoints.py  test_hpt.py  test_static_data.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  app.js  biome.json  eslint.config.js  generate-social.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  style.css  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  ThemeContext.tsx  api.ts  constants.ts  index.css  types.ts  utils.ts
frontend/src/components/: About.css  About.tsx  Annotations.css  Annotations.tsx  BenchmarkTable.css  BenchmarkTable.tsx  CustomGoalInput.tsx  DetailView.css  DetailView.tsx  ErrorPage.tsx  ErrorState.css  ErrorState.tsx  Header.css  Header.tsx  LoadingSpinner.css  LoadingSpinner.tsx  PerformanceChart.css  PerformanceChart.tsx
frontend/tests/: changes.spec.ts  detail.spec.ts  helpers.ts  home.spec.ts  mobile-nav.spec.ts
frontend/tests/fixtures/: events.json  machines.json  runs.json
