[project]
name = "doesjitgobrrr"
version = "0.1.0"
description = "JIT vs Non-JIT Python Benchmark Dashboard API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.2",
    "greenlet>=3.2.4",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]

[tool.pyright]
typeCheckingMode = "strict"
