[project]
name = "doesjitgobrrr"
version = "0.1.0"
description = "JIT vs Non-JIT Python Benchmark Dashboard API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi-cloud-cli>=0.16.1",
    "fastapi[standard]>=0.121.2",
    "greenlet>=3.2.4",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
    "pyperf>=2.7.0",
    "pyyaml>=6.0.3",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]

[tool.pyright]
typeCheckingMode = "strict"

# Test code is deliberately loose — fixtures have complex inferred types
# (AsyncClient, AsyncSession, response objects) that pyright can't always
# resolve without annotating every parameter. Not worth the noise.
[[tool.pyright.executionEnvironments]]
root = "tests"
# api/ modules are added to sys.path at runtime by conftest.py so that
# imports like `from hpt import ...` work. Pyright needs the equivalent
# hint for static analysis.
extraPaths = [".."]
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnusedFunction = "none"
reportMissingImports = "none"

[tool.ruff.lint.per-file-ignores]
# conftest.py deliberately imports after sys.path manipulation so that
# api/ modules are resolvable. E402 is the "imports not at top" rule.
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Pin fixtures and tests to the session loop. The async engine's connection
# pool is bound to the loop it was created on; without this, per-function
# loops blow up with "Event loop is closed".
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
